--- a/facebook/scss/pass-reset.scss
+++ b/facebook/scss/pass-reset.scss
@@ -2,19 +2,25 @@ $primary-color:#ffffff;
 $secondary-color:#e9ebee;
 $logo-color:#1b74e4;
 $transition-color:#0866FF;
+.main{
+    display: flex;
+    flex-direction: column;
 
 .header-one{
-    display: flex;
-    background-color: $primary-color;
-    margin-bottom: 0;
+
+    background-color: #fff;
+    width:100%;
+    min-width: 900px;
+    margin-bottom: 5px;
     h2{
-        font-size:xx-large;
-        font-weight: 700;
-        margin-bottom: 10px;
+        margin-top: 4px;
+        font-size:x-large;
+        font-weight:bolder;
+        margin-bottom: 0;
         margin-left: 23px;
     }
     .email{
-        margin-left: 45vw;
+        margin-left: 56vw;
         padding:12px 5px;
          outline:none;
         border-radius: 4px;
@@ -51,9 +57,11 @@ $transition-color:#0866FF;
         border-color: #fff;
         font-size: medium;
 font-weight: 800;
+min-width: 80px;
     }
     .button1:hover{
         background-color: #216fdb;
+
     }
     .pass-reset{
         margin-left: 7px;
@@ -62,28 +70,29 @@ font-weight: 800;
         color:$logo-color;
         font-size: medium;
 font-weight: 800;
+min-width: 200px;
     }
     .pass-reset:hover{
         text-decoration: underline;
     }
-    
+
+   
 }
-.field{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+ .field{
     background-color: $secondary-color;
-    ;
-    padding:180px 0;
+    
+      width: 100vw;
+      min-width: 1100px;
+  box-sizing: border-box;
+    padding:140px 0 180px 0;
     .input-field{
-        margin-left: 33%;
+        margin:0 500px 0 500px;
+        padding:30px 40px;
     border-radius: 7px;
     background-color:$primary-color;
-    padding:0 12px 30px 25px;
+    min-width: 450px;
     p{
         margin-right: 25px;
-        max-width: 460px;
-        word-break: break-word;
         margin-left: 0;
         margin-right: auto;
     }
@@ -106,7 +115,7 @@ font-weight: 800;
     }
     .cancel{
         margin-top: 16px;
-margin-left: 260px;
+margin-left: 240px;
 padding:10px 22px;
 background-color:#e4e6eb ;
 outline: none;
@@ -131,11 +140,14 @@ font-weight: 800;
     }
     }
 }
+}
+
 body{
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;;
 }
 hr{
   width: 100%;
   border-width: 0.1px;
 }
+
 @import "screen-a"
